2015-01-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Make ‘define-db-col-type-array-variant’ strict.

	* postgres-types.scm (define-db-col-type-array-variant):
	Check that COMPOSED is "based on" SIMPLE and that it has
	trailing square braces.  If these conditions are unmet, signal
	error.  Emphasize requirement nature of COMPOSE in doc comment.

2015-01-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: fs

	* postgres-types.scm (fs): New proc.
	(n+m-stringifier, host-stringifier, macaddr): Use it.

2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Add intermediary handling for type names.

	* postgres-qcons.scm: Import ‘(database postgres-types) type-sql-name’.
	(pretty-type-name): New proc.
	(expr add-noise!): Use it for ‘::’ TYPE expansion.

2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add (database postgres-types) proc: type-sql-name

	* postgres-types.scm (type-sql-name): New proc, exported.

2014-12-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: {PREP,DROP}_PARAMSPECS

	* libpq.c (PREP_PARAMSPECS, DROP_PARAMSPECS): New macros.
	(pg_exec_params, pg_exec_prepared, pg_send_query_params)
	(pg_send_query_prepared): Use them.

2014-12-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use new type-FOO procs.

	* postgres-col-defs.scm: From ‘(database postgres-types)’,
	don't import ‘dbcoltype-lookup’, ‘dbcoltype:objectifier’,
	‘dbcoltype:stringifier’; instead, import ‘type-objectifier’
	and ‘type-stringifier’.
	(objectifiers): Use ‘type-objectifier’.
	(stringifiers): Use ‘type-stringifier’.
	* postgres-meta.scm: From ‘(database postgres-types)’,
	don't import ‘dbcoltype-lookup’; instead, import ‘type-registered?’.
	(check-type/elaborate): Use ‘type-registered?’.
	* postgres-table.scm: From ‘(database postgres-types)’, don't
	import ‘dbcoltype-lookup’, ‘dbcoltype:objectifier’,
	dbcoltype:‘default’, ‘dbcoltype:stringifier’; instead, import
	‘type-registered?’, ‘type-stringifier’, ‘type-objectifier’,
	‘type-default’.